--- a/style.css
+++ b/style.css
@@ -1,1 +1,42 @@
+html {
+  margin: 0;
+  padding: 0;
+}
 
+body {
+  background-image: url("images/background.jpg");
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+
+#background_cover {
+  width: 100%;
+  min-height: 100%;
+  position: fixed;
+  background-color: rgb(255,0,0);
+  opacity: 0.5;
+  margin: 0;
+  z-index: -1;
+}
+
+#birthday_text {
+  text-align: center;
+  font-size: 5em;
+  width: 100%;
+  margin: 0;
+  padding-top: 1em;
+  padding-bottom: 1em;
+}
+
+#image_container {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#birthday_image {
+  width: 40%;
+}
